--- a/axicomponent/refresh/axi-refresh.axml
+++ b/axicomponent/refresh/axi-refresh.axml
@@ -1,8 +1,8 @@
 <!--components/RefreshView/axi-refresh.wxml-->
-<view id="{{id}}" name="{{name}}" class="axi-refresh {{className||''}}" style="{{style||''}}" onTap="f">
+<view id="{{id}}" name="{{name}}" class="axi-refresh {{className||''}}" style="{{style||''}}" onTap="f" disable-scroll="{{false}}">
 <scroll-view scroll-y="true" onScroll="onScroll" onScrollToLower="onScrollLower" style="width: 100%; position:absolute;top:0;right:0;bottom:0;left:0;">
   <refresh-view id='{{refreshId}}' onOnRefresh="onPullDownRefresh" />
-  <view class="refresh-container" onToucStart='handletouchstart' onTouchMove='handletouchmove' onTouchEnd='handletouchend' onTouchCancel='handletouchcancel'>
+  <view class="refresh-container" onTouchStart='handletouchstart' onTouchMove='handletouchmove' onTouchEnd='handletouchend' onTouchCancel='handletouchcancel'>
     <view class="refresh-content {{slotClass}}"><slot></slot></view>
     <view class='refresh-layout refresh-layout-bottom'>
       <view class="refresh-status refresh-loading"></view>
